# pong

./: CMakeLists.txt  README.md  main.h
ui/: mainwindow.cpp  mainwindow.h  objects.cpp  objects.h
